--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>My website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -11,7 +12,10 @@
     <main>
         
         <p>
-            Im happy to learn HTML coding and please offer me a job
+            Im happy to learn HTML coding and please offer me a job, please and thank you
+        </p>
+        <p>
+            I always work on hardware but this is really cool and im too intrested on learning it.
         </p>
     </main>
     <footer>
